cleaning up aesthetic bugs

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 	<body>
 
 	<div class="topnav" id="myTopnav">
-		<a href="blog.html" class="navactive">Blog</a>
+		<a href="blog.html" class="navactive"><span class="navactive">Blog</span></a>
 	  	<a href="team.html">Team</a>
 	  	<a href="prototypes.html">Design Prototypes</a>
 	  	<a href="index.html" >Why Continuous Authentication</a>
