--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<a href="blog.html">Blog</a>
   		<a href="team.html">Team</a>
   		<a href="prototypes.html">Design Prototypes</a>
-  		<a href="#" class="navactive">Why Continuous Authentication</a>
+  		<a href="#"><span class="navactive">Why Continuous Authentication</span></a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 
