--- a/prototypes.html
+++ b/prototypes.html
@@ -28,7 +28,7 @@
 	<div class="topnav" id="myTopnav">
 		<a href="blog.html">Blog</a>
 	  <a href="team.html">Team</a>
-	  <a href="prototypes.html" class="navactive">Design Prototypes</a>
+	  <a href="prototypes.html"><span class="navactive">Design Prototypes</span></a>
 	  <a href="index.html" >Why Continuous Authentication</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	    <i class="fa fa-bars"></i>
