--- a/team.html
+++ b/team.html
@@ -45,9 +45,8 @@
 
 	<div class="topnav" id="myTopnav">
 	<a href="blog.html">Blog</a>
-  <a href="team.html" class="navactive">Team</a>
+  <a href="team.html" class="navactive"><span class="navactive">Team</span></a>
   <a href="prototypes.html">Design Prototypes</a>
-  <a href="index.html" >Why Continuous Authentication</a>
   <a href="index.html" >Why Continuous Authentication</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -84,8 +83,8 @@
 										<!-- <li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li> -->
 									</ul>
 
-                                    <p class="align-left"><span ><a href="https://www.gracesiqiguo.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Grace</a></span> holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
-                                    <br><br><b>Post MHCI:</b><br>
+                                    <p class="align-left"><span ><a href="https://www.gracesiqiguo.com" style="color:#F79F1A; text-decoration: none; cursor: pointer;">Grace</a></span> holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
+                                    <br><br><b class="force-black">Post MHCI:</b><br>
                                     UX Designer</p>
 								</section>
 
@@ -107,10 +106,10 @@
 
 
 
-									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://zohaibkhan.me" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
+									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://zohaibkhan.me" style="color:#F79F1A; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
-                                    <br><br><b>Post MHCI:</b><br>
+                                    <br><br><b class="force-black">Post MHCI:</b><br>
                                     Product Manager, UX Designer</p>
 								</section>
 								<section  class="align-center">
@@ -126,9 +125,9 @@
 										<li><a href="mailto:sleinweb@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 
-									<p class="align-left"><span ><a href="http://scottleinweber.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
+									<p class="align-left"><span ><a href="http://scottleinweber.com" style="color:#F79F1A; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
-                                    <br><br><b>Post MHCI:</b><br>
+                                    <br><br><b class="force-black">Post MHCI:</b><br>
                                     3D Interaction Designer, UX Designer</p>
 								</section>
 								<section  class="align-center">
@@ -147,8 +146,8 @@
 								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:aroonmathai@cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">EMail</span></a></li>
 							</ul>
-                                    <p class="align-left"><span ><a href="http://aroonmathai.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Aroon</a></span> has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
-                                    <br><br><b>Post MHCI:</b><br>
+                                    <p class="align-left"><span ><a href="http://aroonmathai.com" style="color:#F79F1A; text-decoration: none; cursor: pointer;">Aroon</a></span> has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
+                                    <br><br><b class="force-black">Post MHCI:</b><br>
                                     Product Manager, UX Designer</p>
         						</section>
 								<section  class="align-center">
@@ -166,8 +165,8 @@
 										<li><a href="mailto:xuetingz@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 
-									<p class="align-left"><span ><a href="https://xzhang395.github.io/portfolio/index.html" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Nika</a></span> holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
-                                    <br><br><b>Post MHCI:</b><br>
+									<p class="align-left"><span ><a href="https://xzhang395.github.io/portfolio/index.html" style="color:#F79F1A; text-decoration: none; cursor: pointer;">Nika</a></span> holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
+                                    <br><br><b class="force-black">Post MHCI:</b><br>
                                     Product Designer</p>
 								</section>
 
