Fixing bug in week 2 blog post layout

--- a/blog.html
+++ b/blog.html
@@ -52,16 +52,17 @@
 
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="image">
-							<img src="images/w02_noodle_tower.jpg" alt="Noodle Tower" />
-						</div>
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						
 						<div class="content">
 							<h2>Weeknotes 2 - Kickoff</h2>
 							<p>How do we plan a Kick-off meeting around such a general topic? Can we design some co-design questions to help get as much out of the client as possible and narrow us down on to a specific path?</p>
 							<ul class="actions vertical">
 								<li><a href="week02.html" class="button">Read More</a></li>
 							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w02_noodle_tower.jpg" alt="Noodle Tower" />
 						</div>
 					</section>
 
