bringing up, section upper boundary in week1 blog post

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 					</section>
 
 				<!-- One -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" style="z-index: 999;" id="first">
 						<div class="content">
 							<h2>Weeknotes 1 - Hello!</h2>
 							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
@@ -46,7 +46,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/w01_team_rubric.JPG" alt="Team Rubric" />
+							<img src="images/w01_team_rubric.JPG" alt="Team Rubric" style="z-index: -1;" />
 						</div>
 					</section>
 
