Adding emotion detection video to blog post 12

--- a/week12.html
+++ b/week12.html
@@ -175,8 +175,13 @@ Two very interesting comments came out of our presentation to other capstone tea
 
 <p>This technical demo is an exploration on an idea of using an emotion, or expression, to authenticate oneself. For example, just capturing facial data isn't enough - the user also has to smile to be authenticated, a two-factor system providing more security.</p>
 
+<video  controls  class="center-align-images" style="width: 45%;">
+	<source src="images/MC - Emotion Prototype.mov" type="video/mp4">
+	<source src="images/MC - Emotion Prototype.ogg" type="video/ogg">
+	Your browser does not support HTML5 video.
+</video>
 
-
+<br><br>
 <p>Having spent almost 4 weeks on two different concepts, we decided to create an entirely new, <i>refreshing</i>, prototype for Sprint 3. Stay tuned! </p>
 
 <!-- <div class="row" style="width: 100%;">
