Fixing changes brought up in Team Review 1 - 05/29

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- MC Splash -->
-					<section class="banner style5 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style5 orient-left content-align-left image-position-right fullscreen ">
 						<div class="content" style="width: 60rem;">
 							<h1><b>Team Mastercard</b></h1>
 							<p class="major">The future of authentication in digital payments</p>
@@ -68,14 +68,14 @@
 						</div>
 					</section>
 
-					<section  class="spotlight style1 orient-center content-align-left image-position-right  onload-image-fade-in onload-content-fade-right" style="height: 100%; overflow: hidden;">
+					<section  class="spotlight style1 orient-center content-align-left image-position-right" style="height: 100%; overflow: hidden;">
 						<div class="content" >
 							<header id="first"><h2 onclick="toggleDisplay('our-task-content');"><b>Our task</b></h2></header>
 							<p class="major" id="our-task-content" style="display: block;">Explore an ecosystem of payment authentication experiences.</p>
 
 							<br><br><br>
 
-							<header><h2><b>Current challenges in payemnt</b></h2></header>
+							<header><h2><b>Current challenges in payment</b></h2></header>
 							<br><br>
 							<img src="images/ecosystem.png" style="width:60%;" class="center-align-images" style="" alt="" />
 
@@ -183,12 +183,16 @@
 							  Your browser does not support HTML5 video.
 							</video>
 
-							<!-- <ul class="actions vertical align-center">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Design Prototypes</a></li>
-							</ul> -->
+							<br><br>
+
+							<ul class="actions vertical align-center">
+								<li><a href="prototypes.html" class="button big wide smooth-scroll-middle">Design Prototypes</a></li>
+							</ul>
+							<!-- <br><br><br>
+							<a href="prototypes.html">Continue reading: Design Prototypes</a> -->
 							<br><br><br>
-							<a href="prototypes.html">Continue reading: Design Prototypes</a>
-							<br><br><br>
+
+
 							 
 
 							
