--- a/prototypes.html
+++ b/prototypes.html
@@ -89,23 +89,31 @@
 								<h4><b>A: Show context of use and data collection in action</b></h4>
 							</header>
 
-							<br><br><br>
+							<br>
 
 							<div class="content">
 
 
-								<div class="row ">
-									  <div class="column" style="width:70%;">
-									    <iframe src="https://marvelapp.com/3730g3d?emb=1&iosapp=false&frameless=false" width="480" height="550" allowTransparency="true" frameborder="0" ></iframe>
+								<div class="row center-align-images">
+									  <div class="column" style="width:100%;">
+									    <iframe src="https://marvelapp.com/3730g3d?emb=1&iosapp=false&frameless=false" width="480" height="550" allowTransparency="true" frameborder="0" class="prototype-shadow"></iframe>
 									  </div>
-									  <div class="column" style="width: 30%;">
+									  <!-- <div class="column" style="width: 30%;">
 									    <img src="images/q1bubble.png"  style="width: 100%;" alt="" />
-									  </div>
+									  </div> -->
 
-									  <p><br>We wanted to demonstrate how continuous authentication works in the context of online shopping by providing a realistic on-boarding experience. We created 2 versions of the customer sign-up web flow in high fidelity. One provides a step-by-step explanation of the kind of data being collected, the other gives little explanation and runs in the background.</p>
+									  
+								</div>
+
+								<br><br><br>
+
+								<blockquote>I'd <b>like it to show me</b> what Continuous Authentication is while I'm doing it.</blockquote>
+								<br>
+								<blockquote><b>Check boxes help me know</b> that I have to acknowledge and accept what I'm agreeing to.</blockquote>
+
+								<p><br>We wanted to demonstrate how continuous authentication works in the context of online shopping by providing a realistic on-boarding experience. We created 2 versions of the customer sign-up web flow in high fidelity. One provides a step-by-step explanation of the kind of data being collected, the other gives little explanation and runs in the background.</p>
 
 									  <p>We found that users often skip the verbal description of the definition, but with the step-by-step process, users can better articulate the definition of continuous authentication. </p>
-								</div>
 
 								<br><br><br>
 
@@ -132,7 +140,17 @@
 									  <div class="column" style="width:100%;">
 									  <img src="images/avatar_creepyscale.png"  style="width: 100%;" alt="" />
 									  </div>
+
+
 								</div>
+
+								<br><br>
+
+								<blockquote>I feel fine, companies are doing all this stuff (collecting location, device, etc. data) for marketing. It's common.</blockquote> <br>
+
+								<blockquote>I don't want my face videoed all the time. I'm more comfortable with camera usage on my phone than my computer.</blockquote> <br>
+
+								<br>
 
 								<p><br>We listed all possible types of data that continuous authentication might collect and see how users react to each type of data. We also explored three different ways of prompting users to provide data. First is the online on-boarding web flow. Second is an app-based interface that has an Accuracy scale that changes as users provide more data. Third is an avatar game app where an avatar of the user prompts users for sharing data.</p>
 
@@ -158,7 +176,7 @@
 
 								<div class="row ">
 									  <div class="column" style="width:70%;">
-									  <iframe src="https://marvelapp.com/16h4bc46?emb=1&iosapp=false&frameless=false" width="960" height="600" allowTransparency="true" frameborder="0"></iframe>
+									  <iframe src="https://marvelapp.com/16h4bc46?emb=1&iosapp=false&frameless=false" width="960" height="600" allowTransparency="true" frameborder="0" class="prototype-shadow"></iframe>
 									    
 									  </div>
 								</div>
@@ -172,10 +190,16 @@
 								<br><br><br>
 
 								<div >
-								<img src="images/q3quotes.png"  style="width: 100%;" alt="" />
+
+								<blockquote>I like to see <b>permission</b> and I like to know what it's collecting.<br>What if someone mimics my behavior?<br>How can they promise security?</blockquote> <br>
+
+								<blockquote>There's no need to <b>remind</b> me how potentially <b>invasive</b> it is.</blockquote> <br>
+
+
+								<!-- <img src="images/q3quotes.png"  style="width: 100%;" alt="" /> -->
 								</div>
 
-								<br><br><br>
+								<br><br>
 
 								<p>We tested two prototypes: one is the avatar game, where data is collected in the background while people interact with a fun little avatar of themselves. The other is a checkout authentication pop-up that shows the type of data being collected and verified at the moment.</p>
 								<p>We found that while people want to know exactly what data they are giving up during on-boarding. They don’t want to think about payment or authentication while they pay. Showing data being collected every time only reminds them how potential invasive the technology could be and costs trust in the technology.</p>
@@ -212,10 +236,18 @@
 								<br><br><br>
 
 								<div >
-								<img src="images/q5quotes.png"  style="width: 100%;" alt="" />
-								</div>
+								<blockquote>This feels like something's wrong. This is <b>so in my face</b><cite>male, late 40's</cite></blockquote> <br>
 
-								<br><br><br>
+								<blockquote>It's a little creepy but I'd use it. I <b>forget my wallet</b> all the time<cite>female, 30's</cite></blockquote> <br>
+
+								<blockquote>If this was on <b>my own device</b> it would have been better<cite>female, late 20's</cite></blockquote> <br>
+
+								<blockquote>It's just facial recognition.. Easier than Apple Pay<cite>female student, 25</cite></blockquote> <br>
+
+
+															</div>
+
+								<br><br>
 
 								<p>We wanted to how comfortable people are with video capture in a physical space.  We created a prototype for a small business context using an iPad-based POS like Square where the customer is immediately greeted with a live video capture of their face.</p>
 								<p>Users were skeptical about providing facial data for checkout, and were confused if had not gone through on-boarding first. Most users expressed negative feelings toward video recording from merchants device, but feel way more comfortable when the video is recorded on their device.</p>
@@ -236,10 +268,16 @@
 								<br><br><br> 
 
 								<div >
-								<img src="images/q4quotes.png"  style="width: 100%;" alt="" />
+								<blockquote>I trust my bank, or Mastercard, but not third parties for payment.</blockquote>
+								<br>
+								<blockquote>If everyone is using it, I'll use it. Because it's indicative of trustworthiness.</blockquote>
+								<!-- <img src="images/q4quotes.png"  style="width: 100%;" alt="" /> -->
 								</div>
 
-								<br><br><br>
+								<br><br>
+
+								<p>We wanted to how comfortable people are with video capture in a physical space.  We created a prototype for a small business context using an iPad-based POS like Square where the customer is immediately greeted with a live video capture of their face.</p>
+								<p>Users were skeptical about providing facial data for checkout, and were confused if had not gone through on-boarding first. Most users expressed negative feelings toward video recording from merchants device, but feel way more comfortable when the video is recorded on their device.</p>
 
 								<br><br><br>
 							<img src="images/graces_amazing_hr.png"  style="width: 100%;" alt="" />
@@ -268,10 +306,14 @@
 							<br><br><br>
 
 							<div >
-							<img src="images/q6quotes.png"  style="width: 100%;" alt="" />
+
+							<blockquote>It's reassuring if it (SMS 2FA) happens once in a while ...</blockquote>
+							<br>
+							<blockquote>If the trust score was very very low, I wouldn't want the 2nd factor to go through.</blockquote>
+							<!-- <img src="images/q6quotes.png"  style="width: 100%;" alt="" /> -->
 							</div>
 
-							<br><br><br>
+							<br><br>
 
 							</div>
 
