--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
 						<div class="inner">
 							<h2>About the Team</h2>
 							<p>Our team of five assembled for the 9 month MHCI Capstone project. We are all graduating in August 2018 from CMU's Master of Human-Computer Interaction program.</p>
-							<div class="items style3 small onscroll-fade-in">
+							<div class="items style3 small ">
 								<section class="align-center">
 									<span class="icon style1 major"></span>
 									<h3><a href="https://www.gracesiqiguo.com">Grace Guo</a></h3>
