--- a/week06.html
+++ b/week06.html
@@ -15,6 +15,16 @@
 	</head>
 	<body>
 
+	<div class="topnav" id="myTopnav">
+		<a href="blog.html"><span class="navactive">Blog</span></a>
+	  <a href="team.html">Team</a>
+	  <a href="prototypes.html">Design Prototypes</a>
+	  <a href="index.html" >Why Continuous Authentication</a>
+	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+	    <i class="fa fa-bars"></i>
+	  </a>
+	</div>
+
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
