Adding wk13 to main blog page

--- a/blog.html
+++ b/blog.html
@@ -180,6 +180,20 @@
 						</div>
 					</section>
 
+					<!-- Thirteen -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 13 - Lemonade</h2>
+							<p>For our last sprint of the spring semester, we wanted to branch out of the avatar and online UI spaces into the physical realm. This final prototype tackled a question that has been niggling us since the first month.</p>
+							<ul class="actions vertical">
+								<li><a href="week13.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w13_Lemonade.JPG" alt="" />
+						</div>
+					</section>
+
 					
 
 				<!-- Footer -->
