Adding new landing page to the website

--- a/blog.html
+++ b/blog.html
@@ -15,11 +15,19 @@
 	<body>
 
 	<div class="topnav" id="myTopnav">
-		<a href="blog.html" class="navactive"><span class="navactive">Blog</span></a>
-	  	<a href="team.html">Team</a>
-	  	<a href="prototypes.html">Design Prototypes</a>
-	  	<a href="index.html" >Why Continuous Authentication</a>
-	  	<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+
+		<a href="blog.html" class="hoveractive"><span class="navactive">Blog</span></a>
+  		<a href="team.html" class="hoveractive">Team</a>
+  		<a href="prototypes.html" class="hoveractive">Design Prototypes</a>
+  		<a href="index.html" class="hoveractive">Why Continuous Authentication</a>
+  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px; margin-top: -5px; position: absolute;">
+			<img style="width:70px;";  src="images/mclogo-nav.png">
+
+		</a>
+		<a href="https://www.hcii.cmu.edu/" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
+			<img style="width:70px;" src="images/hcilogo-nav.png">
+		</a>
+  		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 
 		<!-- Wrapper -->
