Adding on hover feedback to read more button on landing page

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 							<p class="major " style="color:white;">CMU MHCI capstone project sponsored by Mastercard</p>
 							<p class="major"  style="color:white; margin-top: -20px;"><b style="color: white;">Year of 2018</b></p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    box-shadow: inset 0 0 0 1px #f79f1a;
-    color: #f79f1a !important; background-color: #0000002b;">Read More</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    color: #f79f1a !important; background-color: #0000002b;">Read More</a></li>
 							</ul>
 						</div>
 						
