--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   		<a href="team.html" class="hoveractive">Team</a>
   		<a href="prototypes.html" class="hoveractive">Design Prototypes</a>
   		<a href="index.html" class="hoveractive"><span class="navactive">Why Continuous Authentication</span></a>
-  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px; margin-top: -5px; position: absolute;">
-			<img style="width:70px;";  src="images/mclogo-nav.png">
+  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
+			<img style="width:50px;";  src="images/1200px-Mastercard-logo.png">
 
 		</a>
 		<a href="https://www.hcii.cmu.edu/" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
@@ -74,7 +74,7 @@
 							</ul>
 						</div>
 						
-						<div class="image" style="opacity: 0.8; overflow: hidden;">
+						<div class="image" style="opacity: 0.8; overflow: hidden; background-color: white;">
 							<div class="container">
   								<div class="sliding-background"></div>
 							</div>
