--- a/prototypes.html
+++ b/prototypes.html
@@ -31,8 +31,8 @@
   		<a href="team.html" class="hoveractive">Team</a>
   		<a href="prototypes.html" class="hoveractive"><span class="navactive">Design Prototypes</span></a>
   		<a href="index.html" class="hoveractive">Why Continuous Authentication</a>
-  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px; margin-top: -5px; position: absolute;">
-			<img style="width:70px;";  src="images/mclogo-nav.png">
+  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
+			<img style="width:50px;";  src="images/1200px-Mastercard-logo.png">
 
 		</a>
 		<a href="https://www.hcii.cmu.edu/" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
