--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   		<a href="team.html" class="hoveractive">Team</a>
   		<a href="prototypes.html" class="hoveractive">Design Prototypes</a>
   		<a href="index.html" class="hoveractive"><span class="navactive">Why Continuous Authentication</span></a>
-  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
+  		<a href="index.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
 			<img style="width:50px;";  src="images/1200px-Mastercard-logo.png">
 
 		</a>
-		<a href="https://www.hcii.cmu.edu/" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
+		<a href="index.html" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
 			<img style="width:70px;" src="images/hcilogo-nav.png">
 		</a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
@@ -67,7 +67,7 @@
 					<section class="banner style5 orient-left content-align-left image-position-right fullscreen ">
 						<div class="content" style="width: 60rem;">
 							<h1 ><b style="font-weight: 600;" class="mc">Team HamsterBard</b></h1>
-							<p class="major " style="color:white;">CMU MHCI capstone project sponsored by Mastercard</p>
+							<p class="major " style="color:white;"><a href="https://www.hcii.cmu.edu/" style="text-decoration: none;">CMU MHCI</a> capstone project sponsored by Mastercard</p>
 							<p class="major"  style="color:white; margin-top: -20px;"><b style="color: white;">Year of 2018</b></p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    color: #f79f1a !important; background-color: #0000002b;">Read More</a></li>
