--- a/prototypes.html
+++ b/prototypes.html
@@ -31,11 +31,11 @@
   		<a href="team.html" class="hoveractive">Team</a>
   		<a href="prototypes.html" class="hoveractive"><span class="navactive">Design Prototypes</span></a>
   		<a href="index.html" class="hoveractive">Why Continuous Authentication</a>
-  		<a href="https://www.mastercard.us/en-us.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
+  		<a href="index.html" class="dont-activate" style="float: left; left: 0px;  position: absolute;">
 			<img style="width:50px;";  src="images/1200px-Mastercard-logo.png">
 
 		</a>
-		<a href="https://www.hcii.cmu.edu/" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
+		<a href="index.html" class="dont-activate" style=" float: left; left: 60px; margin-top: -5px; position: absolute;">
 			<img style="width:70px;" src="images/hcilogo-nav.png">
 		</a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
