Adding code and images for blog post week 14

--- a/blog.html
+++ b/blog.html
@@ -202,6 +202,20 @@
 						</div>
 					</section>
 
+					<!-- Fourteen -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 14 - Merchant Focus, Physical Stores</h2>
+							<p>For our first week into a sprint cycle for the summer, we decided to shift focus to merchants, and the physical store experience. We’re trying out the Google Design Sprint methodology, a one-week intensive, that focuses on a specific problem on Monday, goes through narrowing the problem, ideating, prototyping, and testing, all by Friday.</p>
+							<ul class="actions vertical">
+								<li><a href="week14.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/funnel.png" alt="" />
+						</div>
+					</section>
+
 					
 
 				<!-- Footer -->
