Centering video in home screen and making it smaller and more visible

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<br>
 							<p>We developed a proof of concept for a facial recognition authentication experience. This is a slow burn project replicating some of the features of Project Abacus’ demo in the studio that shows a certainty rating for a user in the camera. Here’s a demo video of it working on some of our teammates.</p>
 							<br>
-							<video width="600px" controls  >
+							<video class="center-align-images" style="width: 40%;" controls  >
 							  <source src="images/avatar_demo.mp4" type="video/mp4">
 							  <source src="images/avatar_demo.ogg" type="video/ogg">
 							  Your browser does not support HTML5 video.
