--- a/index.html
+++ b/index.html
@@ -75,9 +75,28 @@
 						</div>
 
 						<div class="image" style="opacity: 0.8; overflow: hidden; background-color: white;">
-							<div class="container">
-  								<div class="sliding-background"></div>
-							</div>
+
+							<!-- Swiper Silder
+    ================================================== --> 
+<!-- Slider main container -->
+<div class="swiper-container main-slider" id="myCarousel">
+  <div class="swiper-wrapper">
+
+    <div class="swiper-slide slider-bg-position" style="background:url('images/test.jpg')" data-hash="slide1"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/usertest.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/w02_kickoff_discussion.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/w05_scrum_board_02.JPG')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/w08_MCatSXSW_banner.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/w13_Lemonade.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/wedsketch.jpg')" data-hash="slide2"></div>
+
+  </div>
+  <!-- Add Pagination -->
+  <div class="swiper-pagination"></div>
+  <!-- Add Navigation -->
+  <div class="swiper-button-prev" style="color:#F79F1A;"><i class="fa fa-chevron-left"></i></div>
+  <div class="swiper-button-next" style="color:#F79F1A;"><i class="fa fa-chevron-right"></i></div>
+</div>
 						</div>
 					</section>
 
@@ -285,6 +304,7 @@
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script src="assets/js/navbar.js"></script>
+			<script src="assets/js/carousel.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 
 			<script src="assets/js/jquery.scrollex.min.js"></script>
