Adding down arrow to read more button on landing page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 							<p class="major " style="color:white;"><a href="https://www.hcii.cmu.edu/" style="text-decoration: none;">CMU MHCI</a> capstone project sponsored by Mastercard</p>
 							<p class="major"  style="color:white; margin-top: -20px;"><b style="color: white;">Year of 2018</b></p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    color: #f79f1a !important; background-color: #0000002b;">Read More</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    color: #f79f1a !important; background-color: #0000002b;">Read More
+									<i class="fa fa-arrow-down"></i>
+									</a></li> 
 							</ul>
 						</div>
 
