Fixing broken image on carousel

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="swiper-slide slider-bg-position" style="background:url('images/w02_kickoff_discussion.jpg')" data-hash="slide2"></div>
     <div class="swiper-slide slider-bg-position" style="background:url('images/w05_scrum_board_02.JPG')" data-hash="slide2"></div>
     <div class="swiper-slide slider-bg-position" style="background:url('images/w08_MCatSXSW_banner.jpg')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/w13_Lemonade.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:url('images/w13_Lemonade.JPG')" data-hash="slide2"></div>
     <div class="swiper-slide slider-bg-position" style="background:url('images/wedsketch.jpg')" data-hash="slide2"></div>
 
   </div>
