Adding black overlay to header images

--- a/index.html
+++ b/index.html
@@ -84,13 +84,15 @@
 <div class="swiper-container main-slider" id="myCarousel">
   <div class="swiper-wrapper">
 
-    <div class="swiper-slide slider-bg-position" style="background:url('images/test.jpg')" data-hash="slide1"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/usertest.jpg')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/w02_kickoff_discussion.jpg')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/w05_scrum_board_02.JPG')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/w08_MCatSXSW_banner.jpg')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/w13_Lemonade.JPG')" data-hash="slide2"></div>
-    <div class="swiper-slide slider-bg-position" style="background:url('images/wedsketch.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/test.jpg')" data-hash="slide1"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/usertest.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/w02_kickoff_discussion.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/w05_scrum_board_02.JPG')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/w08_MCatSXSW_banner.jpg')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/w13_Lemonade.JPG')" data-hash="slide2"></div>
+    <div class="swiper-slide slider-bg-position" style="background:linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5), transparent),url('images/wedsketch.jpg')" data-hash="slide2"></div>
+
+
 
   </div>
   <!-- Add Pagination -->
