Pushing Blog post 15 to website

--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 6 and 7 - Week three in the four week plan</h2>
-							<p>This week we finally began conducting interviews. Interviews are invaluable because we get to hear about goals, problems and opinions in the users’ own words.</p>
+							<p>This week we finally began conducting interviews. Interviews are invaluable because we get to hear about goals, problems and opinions in the users' own words.</p>
 							<ul class="actions vertical">
 								<li><a href="week06.html" class="button">Read More</a></li>
 							</ul>
@@ -206,13 +206,27 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 14 - Merchant Focus, Physical Stores</h2>
-							<p>For our first week into a sprint cycle for the summer, we decided to shift focus to merchants, and the physical store experience. We’re trying out the Google Design Sprint methodology, a one-week intensive, that focuses on a specific problem on Monday, goes through narrowing the problem, ideating, prototyping, and testing, all by Friday.</p>
+							<p>For our first week into a sprint cycle for the summer, we decided to shift focus to merchants, and the physical store experience. We're trying out the Google Design Sprint methodology, a one-week intensive, that focuses on a specific problem on Monday, goes through narrowing the problem, ideating, prototyping, and testing, all by Friday.</p>
 							<ul class="actions vertical">
 								<li><a href="week14.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="images/funnel.png" alt="" />
+						</div>
+					</section>
+
+					<!-- Fifteen -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 15 - Sprint 5, Fear and Loathing in Physical Retail</h2>
+							<p>The past two weeks we focused on the toughest and most constrained design space we've had yet. Last week we dialed into merchants and what they need. Explored various types of merchants we saw just how wide of an array a Point of Sale provider has to accommodate, and how varied small businesses are.</p>
+							<ul class="actions vertical">
+								<li><a href="week15.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/map2.jpg" alt="" />
 						</div>
 					</section>
 
