--- a/week15.html
+++ b/week15.html
@@ -83,6 +83,8 @@ So this pushed us to have all the computing on the customers device.</p>
 <br><br>
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/map2.jpg" alt="" /></span>
 <br><br>
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/map3.jpg" alt="" /></span>
+<br><br>
 
 <header><h4><b>Testing</b></h4></header>
 
