--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 .sliding-background {
 	background: linear-gradient(
-                     rgba(0,0,0, .5),
-                     rgba(0,0,0, .5)),
+                     rgba(0,0,0, 0),
+                     rgba(0,0,0, 0)),
                      url("images/scrolling-banner.jpg") repeat-x;
   /*background: url("images/scrolling-banner.jpg") repeat-x;*/
   height: 900px; /*1440 × 900*   10401 × 900 */
@@ -76,7 +76,7 @@
 							</ul>
 						</div>
 
-						<div class="image" style="opacity: 0.8; overflow: hidden; background-color: white;">
+						<div class="image" style="opacity: 0.9; overflow: hidden; background-color: black;">
 
 							<!-- Swiper Silder
     ================================================== --> 
